feat: add css to another sections

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -90,140 +90,156 @@
           </div>
         </div>
       </section>
-      <section class="animals_cards">
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-7.png"
-            alt="Pandas"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">giant Pandas</h5>
-              <p class="animal-card__origin">Native to Southwest China</p>
+      <div class="animals-cards__background">
+        <section class="animals_cards">
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-7.png"
+                alt="Pandas"
+                class="animal-card__image"
+              />
             </div>
-            <img
-              src="../../assets//icons/banana-bamboo_icon.svg"
-              alt="herbivore"
-              class="animal-card__icon"
-            />
-          </div>
-        </div>
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">giant Pandas</h5>
+                <p class="animal-card__origin">Native to Southwest China</p>
+              </div>
 
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-2.png"
-            alt="Eagles"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">Eagles</h5>
-              <p class="animal-card__origin">Native to South America</p>
+              <img
+                src="../../assets//icons/banana-bamboo_icon.svg"
+                alt="herbivore"
+                class="animal-card__icon"
+              />
             </div>
-            <img
-              src="../../assets//icons/meet-fish_icon.svg"
-              alt="carnivore"
-              class="animal-card__icon"
-            />
           </div>
-        </div>
 
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-6.png"
-            alt="Gorillas"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">Gorillas</h5>
-              <p class="animal-card__origin">Native to Congo</p>
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-2.png"
+                alt="Eagles"
+                class="animal-card__image"
+              />
             </div>
-            <img
-              src="../../assets//icons/banana-bamboo_icon.svg"
-              alt="herbivore"
-              class="animal-card__icon"
-            />
-          </div>
-        </div>
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">Eagles</h5>
+                <p class="animal-card__origin">Native to South America</p>
+              </div>
 
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-3.png"
-            alt="Two-toed Sloth"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">Two-toed Sloth</h5>
-              <p class="animal-card__origin">Mesoamerica, South America</p>
+              <img
+                src="../../assets//icons/meet-fish_icon.svg"
+                alt="carnivore"
+                class="animal-card__icon"
+              />
             </div>
-            <img
-              src="../../assets//icons/banana-bamboo_icon.svg"
-              alt="herbivore"
-              class="animal-card__icon"
-            />
           </div>
-        </div>
 
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-4.png"
-            alt="cheetahs"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">cheetahs</h5>
-              <p class="animal-card__origin">Native to Africa</p>
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-6.png"
+                alt="Gorillas"
+                class="animal-card__image"
+              />
             </div>
-            <img
-              src="../../assets//icons/meet-fish_icon.svg"
-              alt="carnivore"
-              class="animal-card__icon"
-            />
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">Gorillas</h5>
+                <p class="animal-card__origin">Native to Congo</p>
+              </div>
+              <img
+                src="../../assets//icons/banana-bamboo_icon.svg"
+                alt="herbivore"
+                class="animal-card__icon"
+              />
+            </div>
           </div>
-        </div>
 
-        <div class="animal-card">
-          <img
-            src="../../assets//images/Rectangle 5-1.png"
-            alt="Penguins"
-            class="animal-card__image"
-          />
-          <div class="animal-card__info">
-            <div class="animal-card__info-text">
-              <h5 class="animal-card__title">Penguins</h5>
-              <p class="animal-card__origin">Native to Antarctica</p>
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-3.png"
+                alt="Two-toed Sloth"
+                class="animal-card__image"
+              />
             </div>
-            <img
-              src="../../assets//icons/meet-fish_icon.svg"
-              alt="carnivore"
-              class="animal-card__icon"
-            />
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">Two-toed Sloth</h5>
+                <p class="animal-card__origin">Mesoamerica, South America</p>
+              </div>
+              <img
+                src="../../assets//icons/banana-bamboo_icon.svg"
+                alt="herbivore"
+                class="animal-card__icon"
+              />
+            </div>
           </div>
-        </div>
-        <button class="animal-cards__button big-button margin-top-big">
-          choose your favorite
-        </button>
-        <div class="animal-cards__controls">
-          <button class="animal-cards__controls-left">
-            <img
-              src="../../assets/icons/Vector.svg"
-              alt="left"
-              class="animal-cards__controls-left-image"
-            />
+
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-4.png"
+                alt="cheetahs"
+                class="animal-card__image"
+              />
+            </div>
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">cheetahs</h5>
+                <p class="animal-card__origin">Native to Africa</p>
+              </div>
+              <img
+                src="../../assets//icons/meet-fish_icon.svg"
+                alt="carnivore"
+                class="animal-card__icon"
+              />
+            </div>
+          </div>
+
+          <div class="animal-card">
+            <div class="animal-card__image-wrapper">
+              <img
+                src="../../assets//images/Rectangle 5-1.png"
+                alt="Penguins"
+                class="animal-card__image"
+              />
+            </div>
+            <div class="animal-card__info">
+              <div class="animal-card__info-text">
+                <h5 class="animal-card__title">Penguins</h5>
+                <p class="animal-card__origin">Native to Antarctica</p>
+              </div>
+              <img
+                src="../../assets//icons/meet-fish_icon.svg"
+                alt="carnivore"
+                class="animal-card__icon"
+              />
+            </div>
+          </div>
+          <button class="animal-cards__button big-button margin-top-big">
+            choose your favorite
           </button>
-          <button class="animal-cards__controls-right">
-            <img
-              src="../../assets/icons/Vector(1).svg"
-              alt="right"
-              class="animal-cards__controls-right-image"
-            />
-          </button>
-        </div>
-      </section>
+          <div class="animal-cards__controls">
+            <button class="animal-cards__controls-left btn-square">
+              <img
+                src="../../assets/icons/Vector.svg"
+                alt="left"
+                class="animal-cards__controls-left-image"
+              />
+            </button>
+            <button class="animal-cards__controls-right btn-square">
+              <img
+                src="../../assets/icons/Vector(1).svg"
+                alt="right"
+                class="animal-cards__controls-right-image"
+              />
+            </button>
+          </div>
+        </section>
+      </div>
       <section class="pick-and-feed">
         <div class="pick-and-feed__frame">
           <h2 class="pick-and-feed__title">Pick and feed a friend</h2>
@@ -232,68 +248,74 @@
             we’re glad.
           </h4>
           <p class="pick-and-feed__copy">
-            During a time when the COVID-19 epidemic is touching all of our
-            lives, we’re proud and glad that people around the world find joy in
-            PetStory. Even though the zoo has reopened, we need you now more
-            than ever to help us deal with these problems. Please consider a
-            gift to our Emergency Support Fund.
+            <span class="pick-and-feed__copy--bold"
+              >During a time when the COVID-19 epidemic is touching all of our
+              lives, we’re proud and glad that people around the world find joy
+              in PetStory. </span
+            >Even though the zoo has reopened, we need you now more than ever to
+            help us deal with these problems. Please consider a gift to our
+            Emergency Support Fund.
           </p>
           <h3 class="pick-and-feed__heading">How it works</h3>
-          <div class="pick-and-feed__card">
-            <div class="pick-and-feed__container">
-              <div class="pick-and-feed__container-image">
-                <img
-                  src="../../assets/icons/pay.svg"
-                  alt="Pay"
-                  class="pick-and-feed__container-icon"
-                />
+          <div class="pick-and-feed__widget">
+            <div class="pick-and-feed__card">
+              <div class="pick-and-feed__container">
+                <div class="pick-and-feed__container-image">
+                  <img
+                    src="../../assets/icons/pay.svg"
+                    alt="Pay"
+                    class="pick-and-feed__container-icon"
+                  />
+                </div>
+                <p class="pick-and-feed__container-text">Pay with card</p>
               </div>
-              <p class="pick-and-feed__container-text">Pay with card</p>
+            </div>
+
+            <img
+              src="../../assets//icons/arrow.svg"
+              alt="arrow"
+              class="pick-and-feed__card-arros"
+            />
+
+            <div class="pick-and-feed__card">
+              <div class="pick-and-feed__container">
+                <div class="pick-and-feed__container-image">
+                  <img
+                    src="../../assets/icons/zoo.svg"
+                    alt="Zoo"
+                    class="pick-and-feed__container-icon"
+                  />
+                </div>
+                <p class="pick-and-feed__container-text">
+                  Payment goes to the zoo
+                </p>
+              </div>
+            </div>
+
+            <img
+              src="../../assets//icons/arrow.svg"
+              alt="arrow"
+              class="pick-and-feed__card-arros"
+            />
+
+            <div class="pick-and-feed__card">
+              <div class="pick-and-feed__container">
+                <div class="pick-and-feed__container-image">
+                  <img
+                    src="../../assets/icons/monkey.svg"
+                    alt="Monkey"
+                    class="pick-and-feed__container-icon"
+                  />
+                </div>
+                <p class="pick-and-feed__container-text">
+                  Your favourite animal gets delicious dish
+                </p>
+              </div>
             </div>
           </div>
-
-          <img
-            src="../../assets//icons/arrow.svg"
-            alt="arrow"
-            class="pick-and-feed__card-arros"
-          />
-
-          <div class="pick-and-feed__card">
-            <div class="pick-and-feed__container">
-              <div class="pick-and-feed__container-image">
-                <img
-                  src="../../assets/icons/zoo.svg"
-                  alt="Zoo"
-                  class="pick-and-feed__container-icon"
-                />
-              </div>
-              <p class="pick-and-feed__container-text">
-                Payment goes to the zoo
-              </p>
-            </div>
-          </div>
-
-          <img
-            src="../../assets//icons/arrow.svg"
-            alt="arrow"
-            class="pick-and-feed__card-arros"
-          />
-
-          <div class="pick-and-feed__card">
-            <div class="pick-and-feed__container">
-              <div class="pick-and-feed__container-image">
-                <img
-                  src="../../assets/icons/monkey.svg"
-                  alt="Monkey"
-                  class="pick-and-feed__container-icon"
-                />
-              </div>
-              <p class="pick-and-feed__container-text">
-                Your favourite animal gets delicious dish
-              </p>
-            </div>
-          </div>
-          <button class="pick-and-feed__button">Feed a friend now</button>
+          <button class="pick-and-feed__button big-button">
+            Feed a friend now
+          </button>
         </div>
       </section>
       <section class="testimonials">
