fix: add link to payment section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -254,7 +254,11 @@
               in PetStory. </span
             >Even though the zoo has reopened, we need you now more than ever to
             help us deal with these problems. Please consider a gift to our
-            Emergency Support Fund.
+            <a
+              href="https://kmnkat.github.io/online-zoo/pages/donate/"
+              class="pick-and-feed__copy--link"
+              >Emergency Support Fund</a
+            >.
           </p>
           <h3 class="pick-and-feed__heading">How it works</h3>
           <div class="pick-and-feed__widget">
